# backend

./: .gitignore  Cargo.toml  Dockerfile  Makefile  old-deploy-homolog.yml  readme.md
.github/workflows/: build-base-image.yml  deploy-homolog.yml  test.yml
app/: Cargo.toml
app/src/: config.rs  cronjobs.rs  lib.rs  rabbitmq.rs  test.rs  tracer.rs
app/src/database/: db.rs  error.rs  helpers.rs  mod.rs  models.rs  models_helpers.rs  pagination.rs
app/src/modules/: mod.rs
app/src/modules/access_level/: dto.rs  routes.rs
app/src/modules/auth/: dto.rs  jwt.rs  middleware.rs  routes.rs  service.rs  session.rs
app/src/modules/common/: dto.rs  error_codes.rs  extractors.rs  mod.rs  multipart_form_data.rs  responses.rs  validators.rs
app/src/modules/organization/: dto.rs  routes.rs
app/src/modules/sim_card/: dto.rs  routes.rs
app/src/modules/tracker/: dto.rs  routes.rs
app/src/modules/tracking/: background.rs  cache.rs  dto.rs  mod.rs  routes.rs
app/src/modules/tracking/decoder/: h02.rs
app/src/modules/user/: dto.rs  routes.rs
app/src/modules/vehicle/: dto.rs  repository.rs  routes.rs
app/src/server/: controller.rs  open_api.rs
app/src/services/: s3.rs
app/src/services/mailer/: service.rs  templates.rs
docker/: docker-compose.yml
entity/: Cargo.toml
entity/src/: access_level.rs  lib.rs  organization.rs  prelude.rs  session.rs  sim_card.rs  traits.rs  user.rs  vehicle.rs  vehicle_tracker.rs  vehicle_tracker_last_location.rs  vehicle_tracker_location.rs
env/: .example.env
migration/: .gitignore  Cargo.toml
migration/src/: lib.rs  m20240125_134615_init.rs  m20240125_135052_last_position_trigger.rs  m20240128_013232_seed_test_data.rs  seeder.rs  seeder_consts.rs
migrations/2023-08-15-210512_install_extensions/: up.sql
migrations/2023-08-15-210600_init/: up.sql
migrations/2023-08-15-210730_hypertable_tracker_last_location/: up.sql
migrations/2023-08-15-210828_last_position_trigger/: up.sql
scripts/: check-base-image-needs-rebuilding.sh  check-some-file-in-folder-has-changed.sh
services/api/: Cargo.toml  readme.md
services/api/src/: config.rs  cronjobs.rs  main.rs  rabbitmq.rs  tracer.rs
services/api/src/database/: db.rs  helpers.rs
services/api/src/modules/: globals.rs  mod.rs
services/api/src/modules/access_level/: dto.rs  routes.rs
services/api/src/modules/auth/: dto.rs  middleware.rs  mod.rs  routes.rs  service.rs  session.rs
services/api/src/modules/common/: dto.rs  extractors.rs  responses.rs
services/api/src/modules/organization/: routes.rs
services/api/src/modules/sim_card/: dto.rs  routes.rs
services/api/src/modules/tracker/: dto.rs  routes.rs
services/api/src/modules/tracking/: background.rs  cache.rs  dto.rs  mod.rs  routes.rs  utils.rs
services/api/src/modules/tracking/decoder/: h02.rs  mod.rs
services/api/src/modules/user/: dto.rs  routes.rs
services/api/src/modules/vehicle/: repository.rs  routes.rs
services/api/src/server/: controller.rs  mod.rs  open_api.rs
services/api/src/services/: mod.rs  s3.rs
services/api/src/services/mailer/: dto.rs  service.rs
services/api/src/templates/: recover-password.hbs
services/decoder/: .gitignore  Cargo.toml  Dockerfile  Makefile  readme.md
services/decoder/docs/h02/: readme.md
services/decoder/env/: example.yaml
services/decoder/src/: config.rs  http.rs  main.rs  rabbitmq.rs  tracer.rs
services/decoder/src/protocols/: common.rs  mod.rs
services/decoder/src/protocols/h02/: decoder.rs  heartbeat.rs  location.rs  mod.rs  utils.rs
services/decoder/src/server/: h02.rs  listeners.rs  mod.rs
services/mailer/: .gitignore  Cargo.toml  Dockerfile  Makefile  readme.md
services/mailer/docs/: async-api.yml  dev_setup.md
services/mailer/env/: .example.yaml  example.yaml
services/mailer/src/: config.rs  mailer.rs  main.rs  tracer.rs
services/mailer/src/http/: routes.rs  server.rs
services/mailer/src/queue/: mod.rs
services/mailer/src/queue/controller/: mod.rs  router.rs  utils.rs
services/mailer/src/queue/controller/dto/: events.rs  mod.rs  rmq.rs  ses.rs
services/mailer/src/queue/controller/routes/: default.rs  email.rs  mod.rs
services/mailer/src/utils/: errors.rs
services/migration/: Cargo.toml  README.md
services/migration/src/: lib.rs  m20240125_133701_install_extensions.rs  m20240125_135000_hypertable_tracker_last_location.rs  m20240128_013232_seed_test_data.rs  seeder.rs  seeder_consts.rs
shared/: Cargo.toml  readme.md
shared/src/: constants.rs  lib.rs  tracer.rs
shared/src/constants/: mod.rs  rabbitmq.rs
shared/src/dto/: mailer.rs  mod.rs  validation.rs
shared/src/dto/decoder/: h02.rs
shared/src/entity/: access_level.rs  mod.rs  organization.rs  prelude.rs  session.rs  sim_card.rs  spatial_ref_sys.rs  user.rs  vehicle.rs  vehicle_tracker.rs  vehicle_tracker_last_location.rs  vehicle_tracker_location.rs
src/: config.rs  cronjobs.rs  main.rs  rabbitmq.rs  schema.rs
src/database/: db.rs  error.rs  mod.rs  models.rs  models_helpers.rs  pagination.rs  schema.rs
src/http/: controller.rs
src/modules/: mod.rs
src/modules/auth/: constants.rs  dto.rs  error_codes.rs  jwt.rs  middleware.rs  mod.rs  routes.rs  service.rs  session.rs
src/modules/common/: dto.rs  error_codes.rs  extractors.rs  mod.rs  multipart_form_data.rs  responses.rs  validators.rs
src/modules/organization/: dto.rs  mod.rs  repository.rs  routes.rs
src/modules/tracker/: constants.rs  dto.rs  mod.rs  routes.rs
src/modules/user/: dto.rs  routes.rs
src/modules/vehicle/: dto.rs  repository.rs  routes.rs
src/scheduled/: cronjobs.rs  mod.rs
src/server/: controller.rs  open_api.rs
src/services/: s3.rs
src/services/mailer/: dto.rs  mod.rs  service.rs  templates.rs
src/utils/: string.rs
templates/: confirm-email.hbs
