[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "app", "entity", "migration"]

[dependencies]
app = { path = "app" }
entity = { path = "entity" }
migration = { path = "migration" }

# Depencies shared by "sub" workspaces
[workspace.dependencies]
sea-orm = { version = "0.12", features = [
    "macros",
    "debug-print",
    "sqlx-postgres",
    "sea-orm-internal",
    "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "3.5.0", features = ["chrono", "uuid"] }
