[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "app", "entity", "migration"]

[dependencies]
app = { path = "app" }
entity = { path = "entity" }
migration = { path = "migration" }

# Depencies shared by "sub" workspaces
[workspace.dependencies]
bcrypt = "0.15.0"
convert_case = "0.6.0"
sea-orm = { version = "0.12", features = [
    "macros",
    "with-chrono",
    "debug-print",
    "sqlx-postgres",
    "sea-orm-internal",
    "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
utoipa = { version = "3.5.0", features = ["chrono", "uuid"] }
