[workspace]
members = ["shared", "services/mailer", "services/decoder"]
resolver = "2"

# Depencies shared by at least two "sub" workspaces
# if a dependency is used by only one workspace there
# is no reason for it to be declared here
[workspace.dependencies]
shared = { path = "shared" }

bcrypt = "0.15.1"
lazy_static = "1.4.0"
convert_case = "0.6.0"
strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
utoipa = { version = "4.2.0", features = ["chrono", "uuid"] }

sea-orm = { version = "0.12", features = [
    "macros",
    "with-chrono",
    "debug-print",
    "sqlx-postgres",
    "sea-orm-internal",
    "runtime-tokio-rustls",
] }

# Axum
axum = { version = "0.7.5", features = ["json", "macros", "multipart"] }

# AWS
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-config = "1.18.0"

# UUIDs
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# DTO validation
validator = { version = "0.16", features = ["derive"] }

# Shutdown signal handling
signal-hook = "0.3.15"

# RabbitMQ
lapin = "2.3.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Tokio
tokio = { version = "1.3.1", features = ["full"] }
tokio-stream = "0.1.12"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.28.0"

# Open Telemetry
opentelemetry = { version = "0.27.0" }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-jaeger-propagator = "0.27.0"
