[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
# Sub workspaces
entity = { path = "../entity" }
shared = { path = "../shared" }
migration = { path = "../migration" }

# Workspace inherited dependencies
serde = { workspace = true }
strum = { workspace = true }
bcrypt = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
lazy_static = { workspace = true }
convert_case = { workspace = true }

# SQL
sqlx = "0.7.3"
sea-query = { version = "0.30.7", features = ["backend-postgres"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx"] }

# geometric types
geo-types = { version = "0.7.12", features = ["serde"] }
geozero = { version = "0.11.0", features = ["with-geo", "with-postgis-sqlx"] }

# Serde
serde_with = "3.4.0"
serde_json = "1.0.107"

# Tracing
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Utoipa
utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

# Tokio
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.1"
tokio = { version = "1.31.0", features = ["full"] }

# Axum
axum-client-ip = "0.4.1"
axum_typed_multipart = "0.10.0"
axum = { version = "0.6.20", features = [
    "json",
    "macros",
    "headers",
    "multipart",
] }

# SocketIO
socketioxide = { version="0.8", features = ["state", "extensions"] }

# Deadpool
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"

# AWS
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"

# Crypto
jsonwebtoken = "8.3.0"

# RNG
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }

# Enviroment variables
envy = "0.4"

# RabbitMq
lapin = "2.3.1"

# HTTP
http = "0.2.9"
cookie = "0.17"

# Tower
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors", "trace"] }

# Data Types
ipnetwork = "0.20.0"
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Request Validation
regex = "1.9.3"
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0.74"

# Shutdown signals
signal-hook = "0.3.17"

# Async Utils
futures-util = "0.3.29"
