[package]
name = "shared"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true }
lapin = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
convert_case = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

email-format = "0.8.1"
