[package]
name = "shared"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true }
lapin = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
validator = { workspace = true }
convert_case = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# otel
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-jaeger-propagator = { workspace = true }
