[package]
name = "api"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
# Sub workspaces
migration = { path = "../migration" }

# Workspace inherited dependencies
shared = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
bcrypt = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
lazy_static = { workspace = true }
convert_case = { workspace = true }
serde_json = { workspace = true }
envy = { workspace = true }

# TRACING
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# OTEL
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Tokio
tokio-stream = { workspace = true }
tokio-reactor-trait = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio = { workspace = true }

# RabbitMQ
lapin = { workspace = true }

# SQL
sqlx = "0.7.3"
sea-query = { version = "0.30.7", features = ["backend-postgres"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx"] }

# geometric types
geo-types = { version = "0.7.12", features = ["serde"] }
geozero = { version = "0.11.0", features = ["with-geo", "with-postgis-sqlx"] }

# Serde
serde_with = "3.4.0"

# Utoipa
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# Axum
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-client-ip = "0.5.1"
axum_typed_multipart = "0.11.0"
axum = { workspace = true }

# SocketIO
socketioxide = { version = "0.12", features = ["state", "extensions"] }

# Deadpool
deadpool = "0.9.5"

# AWS
aws-config = { workspace = true }
aws-sdk-s3 = "1.20.0"

# Crypto
jsonwebtoken = "8.3.0"

# RNG
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }

# HTTP
http = "1.0.0"
http-body = "1.0.0"
cookie = "0.17"

# Tower
tower = "0.4.13"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Data Types
ipnetwork = "0.20.0"
url = { version = "2.4.1", features = ["serde"] }
uuid = { workspace = true }

# Request Validation
regex = "1.9.3"
validator = { workspace = true }

# Error handling
anyhow = "1.0.74"

# Shutdown signals
signal-hook = { workspace = true }

# Async Utils
futures-util = "0.3.29"
