[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
lapin = { workspace = true }

signal-hook = { workspace = true }
strum = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

hex = "0.4"
envy = "0.4"
