[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }

config = { workspace = true }

lapin = { workspace = true }

strum = { workspace = true }

signal-hook = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }


hex = "0.4"
