[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
lapin = { workspace = true }
envy = { workspace = true }
tokio-stream = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
aws-config = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
signal-hook = { workspace = true }

futures = "0.3.28"
aws-sdk-sesv2 = "1.1.18"
email-format = "0.8.1"
convert_case = "0.6.0"
strum_macros = "0.24.3"
handlebars = "4.3.6"
governor = "0.5.1"
