# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true }
axum = { workspace = true }
lapin = { workspace = true }
shared = { workspace = true }
validator = { workspace = true }
aws-config = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }

serde = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }

futures = "0.3.28"
aws-sdk-sesv2 = "1.1.18"
convert_case = "0.6.0"
strum_macros = "0.24.3"
handlebars = "4.3.6"
governor = "0.5.1"
config = "0.15.7"
