[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }

rand = "0.8.5"
fake = { version = "2.8", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono"] }

